Fix body not hidding overflow when mobile menu opened

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -94,6 +94,7 @@ body {
 }
 
 .body--noOverflow {
+  max-height: 100vh;
   overflow: hidden;
 }
 
